--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Nerve</title>
-    <link rel="stylesheet" href="static/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
     <div class="popup">
-        <h1>Nerver</h1>
+        <h1>Nerve</h1>
         <div class="options">
             <div class="option">
-                <a href="/register" class="btn participant">
+                <a href="/login" class="btn participant">
                     <p>I am a Participant</p>
                 </a>
             </div>
@@ -25,8 +25,10 @@
         <video></video>
         <video></video>
         <video></video>
+        <video></video>
+        <video></video>
     </div>
 
-<script src="static/index.js"></script>
+    <script src="/static/js/index.js"></script>
 </body>
 </html>
